--- a/package.yaml
+++ b/package.yaml
@@ -13,6 +13,7 @@ description: Please see the README on GitHub at <https://github.com/ejconlon/mod
 dependencies:
 - base >= 4.11 && < 5
 - aeson
+- aeson-casing
 - bytestring
 - containers
 - data-fix
