hasjsonoptions via specific wrappers

--- a/package.yaml
+++ b/package.yaml
@@ -46,6 +46,7 @@ default-extensions:
   - OverloadedStrings
   - Rank2Types
   - RecordWildCards
+  - StandaloneDeriving
   - TypeApplications
   - TypeFamilies
 
