--- a/package.yaml
+++ b/package.yaml
@@ -47,6 +47,7 @@ default-extensions:
   - OverloadedStrings
   - Rank2Types
   - RecordWildCards
+  - StandaloneDeriving
   - TypeApplications
   - TypeFamilies
 
